--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -23,23 +23,94 @@
 
 }
 
-
-
-
 body{
-  background-color: var(--white);
-  
+  min-width: 500px;
 }
 
-.menu{
+.menu_container{
   display: flex;
   justify-content: space-between;
+  align-items: center; 
   background-color: var(--yellow);
-  width: 100%;
+  padding: 5px 15px 5px 15px;
+  border-radius: 0px 0px 4px 4px;
+  border-bottom: 1px solid var(--black);
 }
 
 h1{
   font-weight: var(--semi_bold_600);
-  font-size:  2em;
+  font-size:  20px;
 }
+
+
+#employee_container{
+  font-size: 16px;
+  font-weight: var(--regular_400);
+  display: flex;
+  justify-content: flex-end;
+  padding: 15px;
+}
+
+/*Hamburger*/
+.hamburger{
+  padding: 10px;
+  display: inline-block;
+  cursor: pointer;
+  background-color: transparent;
+  border: 0;
+  margin: 0;
+}
+
+.hamburger__box {
+  width: 35px;
+  height: 24px;
+  display: inline-block;
+  position: relative;
+}
+
+.hamburger__inner {
+  width: 100%;
+  height: 4px;
+  background-color: var(--black);
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: background-color .3s .1s ease-in-out;
+}
+.hamburger__inner::before,
+.hamburger__inner::after {
+  content: "";
+  width: 100%;
+  height: 4px;
+  background-color: var(--black);
+  position: absolute;
+  left: 0;
+  transition: transform .1s .2s ease-in-out;
+}
+
+.hamburger__inner::before {
+  top: -10px;
+}
+
+.hamburger__inner::after {
+  top: 10px;
+}
+
+.hamburger--active .hamburger__inner{
+  background-color: transparent;
+}
+
+.hamburger--active .hamburger__inner::before {
+  transform: translateY(10px) rotate(45deg);
+}
+
+.hamburger--active .hamburger__inner::after {
+  transform: translateY(-10px) rotate(-45deg);
+}
+/************************************************/
+
+
+
+
 
