--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -23,11 +23,54 @@
 
 }
 
+a, button{
+  font-family: 'Montserrat', sans-serif;
+}
+
 body{
   min-width: 500px;
 }
 
-.menu_container{
+
+
+.menu{
+  width: 100%;
+  height: 100vh;
+  background-color: var(--yellow);
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  padding-left: 50px;
+  padding-top: 50px;
+  display: none;
+  overflow: none;
+}
+.menu--active{
+  display: block;
+}
+
+nav ul{
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+}
+nav li{
+  margin-top: 30px;
+}
+a{
+  font-weight: var(--semi_bold_600);
+  text-decoration: none;
+}
+
+a:hover{
+  border-right: 2px solid var(--black);
+}
+
+
+
+
+.navbar{
   position: sticky;
   display: flex;
   justify-content: space-between;
@@ -127,8 +170,9 @@ h1{
     position: fixed;
     width: 352px;
     height: 100%;
-    border-radius: 0px 4px 4px 0px;
+    border-radius: 0px 20px 20px 0px;
     top: 0;
     left: 0;
   }
+
 }
